k8s/base/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  labels:
    app.kubernetes.io/name: front
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: front
  ports:
    - name: http
      port: 80
      targetPort: http
